# multigrok

./: .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  build.gradle  generate_docker.sh  server.go
backends/: BUILD.bazel  OpenGrokBackend.go  OpenGrokBackend_test.go  backends.go  fake.go
fetch/: BUILD.bazel  fetch.go
frontend/: BUILD.bazel  fetchhandler.go  loopbackhandler.go  multigrokserver.go  rawsearchhandler.go  rawsearchhandler_test.go  roothandler.go  searchhandler.go
frontend/templates/: results.html
gradle/wrapper/: gradle-wrapper.properties
middleware/: BUILD.bazel  combiner.go  combiner_test.go  fetcher.go  fetcher_test.go  searcher.go
query/: BUILD.bazel  query.go
src/main/java/com/github/omriz/multigrok/backends/: OpenGrokBackend.java
src/main/java/com/github/omriz/multigrok/datatypes/: SearchResult.java
src/main/java/com/github/omriz/multigrok/interfaces/: Backend.java
src/main/java/com/github/omriz/multigrok/servers/: Frontend.java
src/main/java/com/github/omriz/multigrok/services/: HelloService.java
static/: help.html  index.html
