load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "combiner.go",
        "fetcher.go",
        "searcher.go",
    ],
    importpath = "github.com/omriz/multigrok/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//backends:go_default_library",
        "@com_github_hashicorp_golang_lru//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "combiner_test.go",
        "fetcher_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//backends:go_default_library"],
)
